# server/src/controllers/About.js
@@ -1,0 +1,35 @@
+import responseFormat from '../helpers/response-format' 
+import {isNullOrUndefined} from 'util'
+
+class AboutController {
+    
+    constructor (aboutModel ) {
+        this.aboutModel = aboutModel
+    }
+
+    get(req, res){    
+        
+        return this.aboutModel.about(response => {
+            res.json(responseFormat(response,"ok").defaultMsg())
+        })
+
+    }
+    update(req, res){
+
+        let data = req.body
+
+        if(!isNullOrUndefined(req.files.main_photo)){       
+            data.main_photo = req.files.main_photo[0].path
+            this.aboutModel.main_photoDelete()
+        }
+        return this.aboutModel.update( data, { where: { id : 1 } })
+        .then(response => {
+            res.json(responseFormat(response,"Sobre atualizado com sucesso").defaultMsg())
+        })
+        .catch(error => {
+            res.status(400).json(responseFormat({},"Este sobre não pode ser atualizado").inexistentMsg())
+        })
+
+    }
+}
+export default AboutController
